--- a/recipes/mne-python_1.0/construct.yaml
+++ b/recipes/mne-python_1.0/construct.yaml
@@ -123,22 +123,22 @@ specs:
   - scikit-learn >=0.20.2
   - python-picard
   - numba
-  - vtk >=9.0.1
-  - pyvista >=0.32
-  - pyvistaqt >=0.4
-  - statsmodels
-  - numexpr
-  - pyqt
-  - pillow
-  - joblib
-  - psutil
-  - mffpy >=0.5.7
-  - imageio >=2.6.1
-  - imageio-ffmpeg >=0.4.1
-  - traitlets
-  - mne-qt-browser
-  - ipywidgets
-  - ipyvtklink
+  # vtk >=9.0.1
+  # pyvista >=0.32
+  # pyvistaqt >=0.4
+  # statsmodels
+  # numexpr
+  # pyqt
+  # pillow
+  # joblib
+  # psutil
+  # mffpy >=0.5.7
+  # imageio >=2.6.1
+  # imageio-ffmpeg >=0.4.1
+  # traitlets
+  # mne-qt-browser
+  # ipywidgets
+  # ipyvtklink
 
 condarc:
   channels:
