FIX: Revert some

--- a/recipes/mne-python_1.0/construct.yaml
+++ b/recipes/mne-python_1.0/construct.yaml
@@ -73,15 +73,15 @@ specs:
   - pip
   - conda
   - mamba
-  # jupyter
-  # jupyterlab
-  # ipykernel
-  # nb_conda_kernels
-  # spyder-kernels
-  # spyder
-  # ipympl
-  # darkdetect
-  # qdarkstyle
+  - jupyter
+  - jupyterlab
+  - ipykernel
+  - nb_conda_kernels
+  - spyder-kernels
+  - spyder
+  - ipympl
+  - darkdetect
+  - qdarkstyle
   # Excel I/O
   # openpyxl
   # xlrd
