--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       matrix:
         # TODO: Restore full matrix
-        os: [ubuntu-20.04]  # [ubuntu-18.04, ubuntu-20.04, macos-10.15, macos-11, windows-2019, windows-2022]
+        os: [ubuntu-18.04, ubuntu-20.04, macos-10.15, macos-11, windows-2019, windows-2022]
 
     runs-on: ${{ matrix.os }}
 
@@ -110,7 +110,7 @@ jobs:
       - name: Build installer
         shell: bash -l {0}
         # As of 2022/03/14, ~7 min on the 20.04 run (fastest),
-        timeout-minutes: 10  # TODO: Make 15 or more
+        timeout-minutes: 20
         run: |
           PYTHONUTF8=1 constructor recipes/mne-python_1.0  # enforce UTF-8 encoding when reading files even on Windows
 
