--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -108,6 +108,10 @@ jobs:
 
       - name: Build installer
         shell: bash -l {0}
+        # As of 2022/03/14, ~7 min on 20.04 (fastest) and ~11 min on windows-2019 (slowest).
+        # So let's set this to a reasonable limit that will tell us more quickly
+        # if something has gone wrong with dependency resolution.
+        timeout-minutes: 20
         run: |
           PYTHONUTF8=1 constructor recipes/mne-python_1.0  # enforce UTF-8 encoding when reading files even on Windows
 
