--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -234,7 +234,7 @@ jobs:
           python -c "import os; assert 'PYTHONNOUSERSITE' in os.environ; assert os.environ['PYTHONNOUSERSITE'] == '1'"
 
           # Check that menu shortcuts were created …
-          cd ~/.local/share/applications
+          pushd ~/.local/share/applications
           ls -l
           echo "Checking for existence of .desktop files"
           test `ls MNE-Python*.desktop | wc -l` -eq 5
@@ -248,6 +248,7 @@ jobs:
 
           # Display their contents
           for f in MNE-Python*.desktop; do echo "📂 $f:"; cat "$f"; echo; done
+          popd
 
           # Run MNE's sys_info
           xvfb-run mne sys_info
