--- a/recipes/mne-python_1.0/construct.yaml
+++ b/recipes/mne-python_1.0/construct.yaml
@@ -67,6 +67,7 @@ specs:
   - mne-rsa ~=0.6.0
   - mne-microstates ~=0.3.0
   - mne-ari ~=0.1.0
+  - mne-kit-gui ~=1.0.1
   - autoreject ~=0.3
   # Python
   - python =3.10
