--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -226,6 +226,7 @@ jobs:
         if: ${{ runner.os == 'Linux' }}
         run: |
           sudo apt-get install -y xvfb
+          /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1280x1024x24 -ac +extension GLX +render -noreset -nolisten tcp -nolisten unix
           source ~/mne-python/1.0.0_0/bin/activate
           conda info
           mamba list
@@ -253,7 +254,7 @@ jobs:
           popd
 
           # Run MNE's sys_info
-          xvfb-run mne sys_info
+          mne sys_info
 
           # Try to import MNE and all additional packages included in the
           # installer
