--- a/recipes/mne-python_1.0/construct.yaml
+++ b/recipes/mne-python_1.0/construct.yaml
@@ -48,7 +48,7 @@ menu_packages:
 channels:
   - conda-forge
   - conda-forge/label/mne_dev
-  - conda-forge/label/mne-bids_dev
+  # - conda-forge/label/mne-bids_dev
 
 specs:
   # MNE ecosystem
@@ -68,8 +68,8 @@ specs:
   - mne-microstates ~=0.3.0
   - mne-ari ~=0.1.0
   - mne-kit-gui ~=1.0.1
-  - autoreject ~=0.3
-  - pyprep ~=0.4
+  - autoreject ~=0.3.1
+  - pyprep ~=0.4.0
   # Python
   - python ~=3.10.0
   - pip
@@ -112,6 +112,8 @@ specs:
   - openneuro-py
   # various biological signals (ECG, EOG, EMG, …)
   - neurokit2
+  # GitHub client, https://cli.github.com
+  - gh
   # NeuroSpin needs the following
   - questionary
 
