Use Python-foo instead of readlink

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,7 +98,7 @@ jobs:
         if: ${{ runner.os == 'macOS' }}
         shell: bash -l {0}
         run: |
-          export PATCH_PATH=`readlink -f ./assets/constructor_macOS.patch`
+          export PATCH_PATH=`python -c "import pathlib; print(pathlib.Path('./assets/constructor_macOS.patch').resolve())"`
           cd $CONDA_PREFIX/lib/python3.9/site-packages/constructor
           patch -p1 < ${PATCH_PATH}
 
