--- a/recipes/mne-python_1.0/construct.yaml
+++ b/recipes/mne-python_1.0/construct.yaml
@@ -1,9 +1,5 @@
 version: 1.0.0_0
-name: MNE-Python           # [not osx]
-# macOS .pkg installation target directory defaults to /Applications/$NAME,
-# so let's include the version number in this path
-name: MNE-Python_1.0.0_0  # [osx]
-
+name: MNE-Python
 company: MNE-Python Developers
 
 license_file: ../../assets/license.txt         # [linux]
@@ -20,7 +16,7 @@ initialize_by_default: False
 register_python_default: False
 
 # default_prefix will be ignored by macOS .pkg installer!
-default_prefix: ${HOME}/mne-python/1.0.0_0                          # [unix]
+default_prefix: ${HOME}/mne-python/1.0.0_0                          # [linux]
 default_prefix: "%USERPROFILE%\\mne-python\\1.0.0_0"                # [win]
 default_prefix_domain_user: "%LOCALAPPDATA%\\mne-python\\1.0.0_0"   # [win]
 default_prefix_all_users: "%ALLUSERSPROFILE%\\mne-python\\1.0.0_0"  # [win]
