--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -191,14 +191,14 @@ jobs:
       - name: Check installation (macOS)
         if: ${{ runner.os == 'macOS' }}
         run: |
-          source "/Applications/MNE-Python (1.0.0_0)/mne-python/bin/activate"
+          source /Applications/MNE-Python/mne-python/bin/activate
           conda info
           mamba list
 
           # Test that file permissions are set correctly (owned by "runner",
           # not "root".)
           # https://unix.stackexchange.com/a/7733
-          [ `ls -ld "/Applications/MNE-Python/mne-python_1.0.0_0" | awk 'NR==1 {print $3}'` == "runner" ] || exit 1
+          [ `ls -ld /Applications/MNE-Python/mne-python | awk 'NR==1 {print $3}'` == "runner" ] || exit 1
 
           # Check that the installed Python is, in fact, an Intel binary
           python -c "import platform; assert platform.machine() == 'x86_64'"
@@ -209,11 +209,11 @@ jobs:
           python -c "import os; assert 'CONDA_SUBDIR' in os.environ; assert os.environ['CONDA_SUBDIR'] == 'osx-64'"
           python -c "import os; assert 'PYTHONNOUSERSITE' in os.environ; assert os.environ['PYTHONNOUSERSITE'] == '1'"
 
-          # Check we have all .app bundles in /Applications/MNE-Python (1.0.0_0)
-          test `ls -d "/Applications/MNE-Python (1.0.0_0)"/*.app | wc -l` -eq 5
+          # Check we have all .app bundles in /Applications/MNE-Python
+          test `ls -d /Applications/MNE-Python/*.app | wc -l` -eq 5
 
-          # Test that the custom icon was set on the MNE folder in /Applications/MNE-Python (1.0.0_0)
-          test -f "/Applications/MNE-Python (1.0.0_0)"/Icon$'\r'
+          # Test that the custom icon was set on the MNE folder in /Applications/MNE-Python
+          test -f /Applications/MNE-Python/Icon$'\r'
 
           # Run MNE's sys_info
           mne sys_info
@@ -295,7 +295,7 @@ jobs:
       - name: Export frozen environment definition (macOS)
         if: ${{ runner.os == 'macOS' }}
         run: |
-          source "/Applications/MNE-Python (1.0.0_0)/mne-python/bin/activate"
+          source /Applications/MNE-Python/mne-python/bin/activate
           mamba list --json > MNE-Python-1.0.0_0-macOS_Intel.env.json
           cat MNE-Python-1.0.0_0-macOS_Intel.env.json
 
