Install conda environment on macOS into "hidden" directory
Closes #96

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -191,14 +191,14 @@ jobs:
       - name: Check installation (macOS)
         if: ${{ runner.os == 'macOS' }}
         run: |
-          source /Applications/MNE-Python/mne-python/bin/activate
+          source /Applications/MNE-Python/.mne-python/bin/activate
           conda info
           mamba list
 
           # Test that file permissions are set correctly (owned by "runner",
           # not "root".)
           # https://unix.stackexchange.com/a/7733
-          [ `ls -ld /Applications/MNE-Python/mne-python | awk 'NR==1 {print $3}'` == "runner" ] || exit 1
+          [ `ls -ld /Applications/MNE-Python/.mne-python | awk 'NR==1 {print $3}'` == "runner" ] || exit 1
 
           # Check that the installed Python is, in fact, an Intel binary
           python -c "import platform; assert platform.machine() == 'x86_64'"
@@ -295,7 +295,7 @@ jobs:
       - name: Export frozen environment definition (macOS)
         if: ${{ runner.os == 'macOS' }}
         run: |
-          source /Applications/MNE-Python/mne-python/bin/activate
+          source /Applications/MNE-Python/.mne-python/bin/activate
           mamba list --json > MNE-Python-1.0.0_0-macOS_Intel.env.json
           cat MNE-Python-1.0.0_0-macOS_Intel.env.json
 
