--- a/recipes/mne-python_1.0/construct.yaml
+++ b/recipes/mne-python_1.0/construct.yaml
@@ -51,8 +51,8 @@ specs:
 
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS START: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
-  - mne =1.0.0=*=0
-  - mne-installer-menus =1.0.0=*=0
+  - mne =1.0.0=*_0
+  - mne-installer-menus =1.0.0=*_0
   - mne-bids ~=0.10.0
   - mne-connectivity ~=0.3.0
   - mne-faster ~=1.1.0
