--- a/recipes/mne-python_1.0/construct.yaml
+++ b/recipes/mne-python_1.0/construct.yaml
@@ -105,6 +105,8 @@ specs:
   - distributed
   # OpenNeuro.org data access
   - openneuro-py
+  # sleep staging
+  - sleepecg
   # various biological signals (ECG, EOG, EMG, …)
   - neurokit2
   # GitHub client, https://cli.github.com
