--- a/recipes/mne-python_1.0/construct.yaml
+++ b/recipes/mne-python_1.0/construct.yaml
@@ -16,16 +16,16 @@ initialize_by_default: False
 register_python_default: False
 
 # default_prefix will be ignored by macOS .pkg installer!
-default_prefix: ${HOME}/mne-python/1.0.0_0                          # [linux]
-default_prefix: "%USERPROFILE%\\mne-python\\1.0.0_0"                # [win]
-default_prefix_domain_user: "%LOCALAPPDATA%\\mne-python\\1.0.0_0"   # [win]
-default_prefix_all_users: "%ALLUSERSPROFILE%\\mne-python\\1.0.0_0"  # [win]
+default_prefix: ${HOME}/mne-python/1.0.0_1                          # [linux]
+default_prefix: "%USERPROFILE%\\mne-python\\1.0.0_1"                # [win]
+default_prefix_domain_user: "%LOCALAPPDATA%\\mne-python\\1.0.0_1"   # [win]
+default_prefix_all_users: "%ALLUSERSPROFILE%\\mne-python\\1.0.0_1"  # [win]
 
 uninstall_name: MNE-Python ${VERSION} (Python ${PYVERSION})
 
-installer_filename: MNE-Python-1.0.0_0-macOS_Intel.pkg  # [osx]
-installer_filename: MNE-Python-1.0.0_0-Windows.exe      # [win]
-installer_filename: MNE-Python-1.0.0_0-Linux.sh         # [linux]
+installer_filename: MNE-Python-1.0.0_1-macOS_Intel.pkg  # [osx]
+installer_filename: MNE-Python-1.0.0_1-Windows.exe      # [win]
+installer_filename: MNE-Python-1.0.0_1-Linux.sh         # [linux]
 
 post_install: ../../assets/post_install_macOS.sh        # [osx]
 post_install: ../../assets/post_install_linux.sh        # [linux]
@@ -53,6 +53,7 @@ specs:
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
   - mne =1.0.0=*_1
   - mne-installer-menus =1.0.0=*_1
+  - mne-qt-browser ~=0.2.6
   - mne-bids ~=0.10.0
   - mne-connectivity ~=0.3.0
   - mne-faster ~=1.1.0
@@ -119,4 +120,4 @@ condarc:
     - conda-forge
   channel_priority: strict
   allow_other_channels: False
-  env_prompt: "(mne-1.0.0_0) "
+  env_prompt: "(mne-1.0.0_1) "
