--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -190,6 +190,7 @@ jobs:
 
       - name: Check installation (macOS)
         if: ${{ runner.os == 'macOS' }}
+        shell: bash -el {0}
         run: |
           source /Applications/MNE-Python/.mne-python/bin/activate
           conda info
@@ -227,6 +228,7 @@ jobs:
 
       - name: Check installation (Linux)
         if: ${{ runner.os == 'Linux' }}
+        shell: bash -el {0}
         run: |
           sudo apt-get install -y xvfb
           /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1280x1024x24 -ac +extension GLX +render -noreset -nolisten tcp -nolisten unix
