--- a/recipes/mne-python_1.0/construct.yaml
+++ b/recipes/mne-python_1.0/construct.yaml
@@ -75,8 +75,9 @@ specs:
   - mne-ari ~=0.1.0
   - mne-kit-gui ~=1.0.1
   - mne-icalabel ~=0.1.0
-  - pytorch  # [win]  for mne-icalabel
-  - cpuonly  # [win]  for mne-icalabel
+  - pytorch                 # [win]  for mne-icalabel
+  - cpuonly                 # [win]  for mne-icalabel
+  - defaults::intel-openmp  # [win]  for mne-icalabel, https://github.com/pytorch/pytorch/issues/7579
   - autoreject ~=0.3.1
   - pyprep ~=0.4.0
   # Python
