Include MNE-ICALabel for macOS and Linux (#123)
* Include MNE-ICALabels

* Move pytorch channel up?

* Enable debugging

* Another try

* Avoid CUDA install

* Revert "Enable debugging"

This reverts commit 25fd709f4225b6f26e6fbf2251c5a4b3a15b9cb3.

* More logging

* Use defaults::intel-openmp on Windows

* Drop Windows support

--- a/recipes/mne-python_1.0/construct.yaml
+++ b/recipes/mne-python_1.0/construct.yaml
@@ -69,6 +69,7 @@ specs:
   - mne-microstates ~=0.3.0
   - mne-ari ~=0.1.0
   - mne-kit-gui ~=1.0.1
+  - mne-icalabel ~=0.1.0  # [not win]
   - autoreject ~=0.3.1
   - pyprep ~=0.4.0
   # Python
