--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,6 +91,9 @@ jobs:
       - name: Extract MNE_INSTALLER_VERSION
         shell: bash -el {0}
         run: |
+          pwd
+          ls -al
+          ls -al ./tools
           source ./tools/extract_verion.sh
           echo "Version: ${VERSION} (Python=${PYSHORT})"
           echo "MNE_INSTALLER_VERSION=${VERSION}" >> $GITHUB_ENV
