--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,6 +96,7 @@ jobs:
           echo "MNE_INSTALLER_VERSION=\"${MNE_INSTALLER_VERSION}\"" >> $GITHUB_ENV
           echo "RECIPE_DIR=\"${RECIPE_DIR}\"" >> $GITHUB_ENV
           test "$MNE_INSTALLER_VERSION" != ""
+          test "$RECIPE_DIR" != ""
           test "$PYSHORT" != ""
 
       - name: Install Micromamba
