--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -93,8 +93,8 @@ jobs:
         run: |
           source ./tools/extract_version.sh
           echo "Version: ${MNE_INSTALLER_VERSION} (Python=${PYSHORT})"
-          echo "MNE_INSTALLER_VERSION=\"${MNE_INSTALLER_VERSION}\"" >> $GITHUB_ENV
-          echo "RECIPE_DIR=\"${RECIPE_DIR}\"" >> $GITHUB_ENV
+          echo "MNE_INSTALLER_VERSION=${MNE_INSTALLER_VERSION}" >> $GITHUB_ENV
+          echo "RECIPE_DIR=${RECIPE_DIR}" >> $GITHUB_ENV
           test "$MNE_INSTALLER_VERSION" != ""
           test "$RECIPE_DIR" != ""
           test "$PYSHORT" != ""
